--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 hr {
 height: 6px;
 color: #123455;
-background-color: #123455;
+background-color: #a7ee00;
 border: none;
 margin-bottom: 5px;
 margin-top: 0px;
@@ -27,7 +27,7 @@ margin-top: 0px;
     margin-left: 55px;
     margin-right: 55px;
     border-radius: 5%;
-    border: #3B5998;
+    border: #a7ee00;
     border-style: solid;
     border-width: 2px;
 
